--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5824409d-41fd-4e2e-b3a7-1ae4d131f30c"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
